2008-11-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.0.0
	
2008-11-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added '~' to reserved characters.
	* src/Util.cc

2008-11-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Do not urlencode Request::url in setUrl() because we want unmodified
	URL using Request::getUrl()
	* src/Request.cc
	* src/Request.h
	* test/RequestTest.cc

2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian, Japanese, Bulgarian, Russian and French translations.
	Thanks to all translators.
	* po/bg.po
	* po/fr.po
	* po/ja.po
	* po/ru.po
	* po/uk.po
	
2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.0.0
	* configure.ac

2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added nosqlite3 build to build_test.sh.
	Renamed noxml as expat.
	* build_test.sh
	
2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated INPUT FILE section.
	* doc/aria2c.1.txt

2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Excluded testLoad_compat() and testLoad_nonBt_compat() when compiled
	on big endian systems because test .aria2 files are made for little
	endian systems.
	* test/DefaultBtProgressInfoFileTest.cc

2008-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Dropped ares support.
	* README
	* configure.ac
	* m4/libares.m4: Removed.
	* src/AsyncNameResolver.cc
	* src/Makefile.am
	* test/Makefile.am

2008-11-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten ByteArrayDiskWriter::size() using seekg() and tellg().
	Removed const qualifier from DiskWriter::size().
	* src/AbstractDiskWriter.cc
	* src/AbstractDiskWriter.h
	* src/ByteArrayDiskWriter.cc
	* src/ByteArrayDiskWriter.h
	* src/DiskWriter.h
	* test/ByteArrayDiskWriterTest.cc
	
2008-11-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
