@@ -1,11 +1,11 @@
 .\"     Title: aria2c
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: 11/18/2008
+.\"      Date: 11/20/2008
 .\"    Manual: 
 .\"    Source: 
 .\"
-.TH "ARIA2C" "1" "11/18/2008" "" ""
+.TH "ARIA2C" "1" "11/20/2008" "" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -782,8 +782,8 @@ is given, this feature is disabled\&. Default:
 .RS 4
 Print the version number, copyright and the configuration information and exit\&.
 .RE
-.SS "OPTIONS THAT TAKES OPTIONAL ARGUMENTS"
-The options that has its arguments surrounded by square brackets([]) are optional\&. Usually ommiting the argument is evaluated to \fItrue\fR\&. If you use short form of these option(such as \fI\-V\fR) of these options and give arugment, then the option name and its argument should be concatenated like \fI\-Vfalse\fR)\&. If any spaces are inserted between the option name and argument, the argument treated as URI and usually this is not what you expect\&.
+.SS "OPTIONS THAT TAKE AN OPTIONAL ARGUMENT"
+The options that have its argument surrounded by square brackets([]) take an optional argument\&. Usually ommiting the argument is evaluated to \fItrue\fR\&. If you use short form of these options(such as \fI\-V\fR) and give an arugment, then the option name and its argument should be concatenated(e\&.g\&. \fI\-Vfalse\fR)\&. If any spaces are inserted between the option name and the argument, the argument will be treated as URI and usually this is not what you expect\&.
 .sp
 .SS "URL, TORRENT_FILE, METALINK_FILE"
 You can specify multiple URLs in command\-line\&. Unless you specify \fB\-Z\fR option, all URLs must point to the same file or downloading will fail\&.
