@@ -1433,13 +1433,13 @@ are also allocated if they share a same piece.</td>
 </p>
 </dd>
 </dl></div>
-<h3 id="_options_that_takes_optional_arguments">OPTIONS THAT TAKES OPTIONAL ARGUMENTS</h3><div style="clear:left"></div>
-<div class="para"><p>The options that has its arguments surrounded by square brackets([])
-are optional. Usually ommiting the argument is evaluated to <em>true</em>.
-If you use short form of these option(such as <em>-V</em>) of these options and give
-arugment, then the option name and its argument should be concatenated like
-<em>-Vfalse</em>). If any spaces are inserted between the option name and argument, the
-argument treated as URI and usually this is not what you expect.</p></div>
+<h3 id="_options_that_take_an_optional_argument">OPTIONS THAT TAKE AN OPTIONAL ARGUMENT</h3><div style="clear:left"></div>
+<div class="para"><p>The options that have its argument surrounded by square brackets([])
+take an optional argument. Usually ommiting the argument is evaluated to <em>true</em>.
+If you use short form of these options(such as <em>-V</em>) and give
+an arugment, then the option name and its argument should be concatenated(e.g.
+<em>-Vfalse</em>). If any spaces are inserted between the option name and the argument,
+the argument will be treated as URI and usually this is not what you expect.</p></div>
 <h3 id="_url_torrent_file_metalink_file">URL, TORRENT_FILE, METALINK_FILE</h3><div style="clear:left"></div>
 <div class="para"><p>You can specify multiple URLs in command-line.
 Unless you specify <strong>-Z</strong> option, all URLs must point to the same file or downloading will fail.</p></div>
@@ -2030,7 +2030,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2008-11-18 20:35:15 JST
+Last updated 2008-11-20 21:02:18 JST
 </div>
 </div>
 </body>
