@@ -1,3 +1,8 @@
+2008-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed typo in "OPTIONS THAT TAKE AN OPTIONAL ARGUMENT" section.
+	* doc/aria2c.1.txt
+
 2008-11-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	* Release 1.0.0
